actually trying to merge now

--- a/apicall.html
+++ b/apicall.html
@@ -14,18 +14,47 @@
     
         const app = {};
 
+        //date function
+        const date = function() {
+            var today = new Date();
+            var dd = today.getDate();
+            var mm = today.getMonth() + 1; //January is 0!
+            var yyyy = today.getFullYear();
+
+            if (dd < 10) {
+                dd = '0' + dd
+            }
+
+            if (mm < 10) {
+                mm = '0' + mm
+            }
+
+            today = yyyy + '-' + mm + '-' + dd;
+            return today;
+        }
+
         app.getInfo = function() {
             $.ajax({
-                url:'https://api.nasa.gov/neo/rest/v1/neo/3750665?api_key=o9VA2EVoF5h978FUEN79Xxi69MSw6jwsUZOFR1VD',
+                url:'https://api.nasa.gov/neo/rest/v1/feed?',
                 dataType: 'json',
                 method: 'GET',
-                q: ''
+                data: {
+                    api_key: 'o9VA2EVoF5h978FUEN79Xxi69MSw6jwsUZOFR1VD',
+                    // start_date: '2000-01-01'
+                    end_date: date()
+                }
+
                 
             })
             .then((res) => {
-                console.log(res);
+                const nearObjects = res.near_earth_objects
+                console.log(nearObjects);
+
+
             })
         }
+
+
 
         app.init = function() {
             app.getInfo();
