clint is adding displayInfo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 
       <main>
             <div class="leftSide"></div>
-            <div class="rightSide"></div>
+            <div class="rightSide">
+                  <div class="datadisplay">
+                        <h2></h2>
+                  </div>
+            </div>
 
       </main>
 
