--- a/index.html
+++ b/index.html
@@ -4,26 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="styles/style.css">
     <title>Document</title>
-    <style>
-          header{
-                height:100vh;
-                width:100%;
-                background:black;
-                display:flex;
-                flex-flow:column-reverse nowrap;
-                justify-content:space-between;
-                
-
-          }
-          header img{
-
-          }
-    </style>
+   
 </head>
 <body>
       <header class="hero">
-            <img src="planet-02.svg" alt="">
+            <img src="#" alt="">
             <h1>please don't panic</h1>
             <h2>asteroids that passed earth today</h2>
             <a href="#"> font awesome arrow </a>
