javascript workinggit status

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
             <img src="#" alt="">
             <h1>please don't panic</h1>
             <h2>asteroids that passed earth today</h2>
+            <div class="todayAverage">
+                  <p class="averageSize"></p>
+                  <p class="averageDistance"></p>
+                  <p class="averageSpeed"></p>
+            </div>
             <a href="#"> font awesome arrow </a>
       </header>
 
