put some CSS, HTML and Javascript stuff

--- a/index.html
+++ b/index.html
@@ -13,11 +13,6 @@
             <img src="#" alt="">
             <h1>please don't panic</h1>
             <h2>asteroids that passed earth today</h2>
-            <div class="todayAverage">
-                  <p class="averageSize"></p>
-                  <p class="averageDistance"></p>
-                  <p class="averageSpeed"></p>
-            </div>
             <a href="#"> font awesome arrow </a>
       </header>
 
@@ -34,7 +29,12 @@
 
                   
                   <div class="rightSide">
-                        
+							<div class="todayAverage">
+								<h3>Today's Average</h3>
+								<p class="averageSize"></p>
+								<p class="averageDistance"></p>
+								<p class="averageSpeed"></p>
+							</div>
                   </div>
            </div>
 
