mergin to work on mobile view

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<<<<<<< HEAD
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -10,25 +9,15 @@
 	 crossorigin="anonymous">
 	<link rel="stylesheet" href="styles/style.css">
 	<title>Document</title>
-=======
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
-
-    <link rel="stylesheet" href="styles/style.css">
-    <title>Document</title>
->>>>>>> 132e6ca3508af7b686702e75d43d62033bc50bba
    
 </head>
 <body>
       <header class="hero" id="scene">
-            <img src="#" alt="">
             <h1>please don't panic</h1>
-            <h2>asteroids that passed earth today</h2>
+            <h2>asteroids that passed Earth today</h2>
             <img src="planet-05.svg" alt="" class="earth">
-            <img src="small.svg" alt="" class="ast small" data-depth="1">
-            <img src="small.svg" alt="" class="ast small2" data-depth="2">
+            <img src="small.svg" alt="" class="ast small">
+            <img src="small.svg" alt="" class="ast small2">
             <img src="small.svg" alt="" class="ast small3">
             <img src="small.svg" alt="" class="ast small4">
             <img src="medium.svg" alt="" class="ast medium">
