--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<<<<<<< HEAD
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -10,15 +9,6 @@
 	 crossorigin="anonymous">
 	<link rel="stylesheet" href="styles/style.css">
 	<title>Document</title>
-=======
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
-
-    <link rel="stylesheet" href="styles/style.css">
-    <title>Document</title>
->>>>>>> 132e6ca3508af7b686702e75d43d62033bc50bba
    
 </head>
 <body>
@@ -40,20 +30,28 @@
 			<h3 class="selectHeader">Select your asteroid</h3>
            <div class="wrapper">
                   <div class="leftSide">
-                        <ul class="asteroidList">
-
-                        </ul>
+							<div class="firstInnerLeft">
+								<div class="secondInnerLeft">
+									<ul class="asteroidList">
+	
+									</ul>
+								</div>
+							</div>
                   </div>
       
 
 
                   
                   <div class="rightSide">
-							<div class="todayAverage">
-								<h3>Today's Average</h3>
-								<p class="averageSize"></p>
-								<p class="averageDistance"></p>
-								<p class="averageSpeed"></p>
+							<div class="firstInnerRight">
+								<div class="secondInnerRight">
+									<div class="todayAverage">
+										<h3>Today's Average</h3>
+										<p class="averageSize"></p>
+										<p class="averageDistance"></p>
+										<p class="averageSpeed"></p>
+									</div>
+								</div>
 							</div>
                   </div>
            </div>
