--- a/index.html
+++ b/index.html
@@ -28,31 +28,23 @@
       <main>
 			<h3 class="selectHeader">Select your asteroid</h3>
            <div class="wrapper">
-                  <div class="leftSide">
-							<div class="firstInnerLeft">
-								<div class="secondInnerLeft">
-									<ul class="asteroidList">
-	
-									</ul>
-								</div>
-							</div>
-                  </div>
-      
+                  <div class="container">
+                        <div class="firstInnerLeft">
+                              <div class="secondInnerLeft">
+                                    <ul class="asteroidList">
 
-
-                  
-                  <div class="rightSide">
-							<div class="firstInnerRight">
-								<div class="secondInnerRight">
-									<div class="todayAverage">
-										<h3>Today's Average</h3>
-										<p class="averageSize"></p>
-										<p class="averageDistance"></p>
-										<p class="averageSpeed"></p>
-									</div>
-								</div>
-							</div>
+                                    </ul>
+                              </div>
+                        </div>
                   </div>
+                  <div class="rightSide">     
+                        <div class="todayAverage">
+                              <h3>Today's Average</h3>
+                              <p class="averageSize"></p>
+                              <p class="averageDistance"></p>
+                              <p class="averageSpeed"></p>
+                        </div>
+                  </div>     
            </div>
 
       </main>
