--- a/index.html
+++ b/index.html
@@ -25,27 +25,33 @@
       </header>
 
 
+      <h3 class="selectHeader">Select your asteroid</h3>
       <main>
-			<h3 class="selectHeader">Select your asteroid</h3>
-           <div class="wrapper">
-                  <div class="container">
-                        <div class="firstInnerLeft">
-                              <div class="secondInnerLeft">
-                                    <ul class="asteroidList">
-
-                                    </ul>
+                  <div class="leftWrapper">
+                        <div class="container">
+                              <div class="firstInnerLeft">
+                                    <div class="secondInnerLeft">
+                                          <ul class="asteroidList">
+      
+                                          </ul>
+                                    </div>
                               </div>
                         </div>
                   </div>
-                  <div class="rightSide">     
-                        <div class="todayAverage">
-                              <h3>Today's Average</h3>
-                              <p class="averageSize"></p>
-                              <p class="averageDistance"></p>
-                              <p class="averageSpeed"></p>
-                        </div>
-                  </div>     
-           </div>
+                  <div class="rightWrapper">
+                        <div class="rightSide">     
+                              <div class="firstInnerRight">
+                                    <div class="secondInnerRight">
+                                          <div class="todayAverage">
+                                                <h3>Today's Average</h3>
+                                                <p class="averageSize"></p>
+                                                <p class="averageDistance"></p>
+                                                <p class="averageSpeed"></p>
+                                          </div>
+                                    </div>
+                              </div>
+                        </div>   
+                  </div>  
 
       </main>
 
