--- a/index.html
+++ b/index.html
@@ -66,10 +66,14 @@
 
 
       <footer>
-            <h4>Made by Clint Lee and Christian Fowler 2018</h4>
+            <h4>© Made by Clint Lee and Christian Fowler 2018</h4>
+            <div class="twitterBtn">
+                  <a href="https://twitter.com/share" class="twitter-share-button" data-url="#" data-size="large" data-text="Asteroid that passed us today... Phew...">Tweet</a>
+            </div>
       </footer>
 
 
+      <script>!function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https'; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = p + '://platform.twitter.com/widgets.js'; fjs.parentNode.insertBefore(js, fjs); } }(document, 'script', 'twitter-wjs');</script>
       <script src='https://code.jquery.com/jquery-3.2.1.min.js' integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4='crossorigin='anonymous'></script>
       <script src="script.js"></script>
       
