clint added twitter button

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                         <div class="headerLayerThree">
                               <h1>please don't panic</h1>
                               <h2>asteroids that passed Earth today</h2>
-                              <h3>(Warning: this website contains flashing lights and colors)</h3>
+                              <h3>(Warning: this website contains flashing colors)</h3>
                         </div>
                   </div>
             </div>
